--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,10 @@
       "class-methods-use-this": "off",
       "camelcase": "off",
       "consistent-return": "off",
+      "no-console": "off",
+      "@typescript-eslint/no-unused-vars": ["error", {
+        "argsIgnorePattern": "_"
+      }],
       "import/extensions": [
         "error",
         "ignorePackages",
